public/css/style.css
/* ... */
.metabar-time-zone {
  flex-grow: 0;
  font-weight: normal; }

.metabar-profile-picture {
  flex-grow: 0;
  margin-left: 20px;
  border: 1px solid #ced7df;
  border-radius: 256px; }

.metabar-user-name {
  flex-grow: 0;
  margin-left: 10px; }

.metabar-via {
  flex-grow: 0;
  margin-left: 20px; }

.metabar-tag {
  flex-grow: 0;
  margin-left: 20px; }

.metabar-menu {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  flex-grow: 1; }

.metabar-menu-item {
  display: none;
  margin: 0 0 0 20px;
  padding: 0; }
  .metabar-menu-item a {
    color: #59626a;
    display: block; }
    .metabar-menu-item a:hover {
      color: #168eea; }

.metabar-metrics {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex-grow: 1; }

.metabar-metrics-item {
  flex-grow: 1;
  margin: 0;
  padding: 10px 0;
  text-align: center;
  border-right: 1px solid #ced7df; }

.metabar-metrics-item-label {
  margin-left: 2px;
  font-weight: normal; }

/* Base Objects - Modifiers
------------------------------ */
.metabar-time--pinned {
  margin-left: -12px;
  padding-left: 10px;
  color: #ffffff;
  background-color: #168eea;
  border-radius: 1px 0 0 1px; }

.metabar-time--pinned-arrow {
  margin-right: -8px;
  width: 0;
  height: 0;
  border-top: 10.5px solid transparent;
  border-bottom: 10.5px solid transparent;
  border-left: 10px solid #168eea; }

.metabar-metrics-item--last {
  border-right: 0; }

/* Global Reset // We'll pull in a common reset here, perhaps in another file!
------------------------------------------------------------ */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box; }

/* Shades Palette
------------------------------------------------------------ */
/* Primary Palette
------------------------------------------------------------ */
/* Blues
------------------------------ */
/* Grays
------------------------------ */
/* Others
------------------------------ */
/* Brands Palette
------------------------------------------------------------ */
/* Font
------------------------------------------------------------ */
/* Border Radii
------------------------------------------------------------ */
/* Box Shadows
------------------------------------------------------------ */
/* Animation
------------------------------------------------------------ */
/* Base Object
------------------------------------------------------------ */
.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
  background-color: rgba(244, 247, 249, 0.9);
  opacity: 0;
  pointer-events: none; }
  .modal:target {
    opacity: 1;
    pointer-events: auto; }

.modal .card {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 200px;
  height: 100px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
  transform: translate(-50%, -50%); }

/* Global Reset // We'll pull in a common reset here, perhaps in another file!
------------------------------------------------------------ */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box; }

/* Shades Palette
------------------------------------------------------------ */
/* Primary Palette
------------------------------------------------------------ */
/* Blues
------------------------------ */
/* Grays
------------------------------ */
/* Others
------------------------------ */
/* Brands Palette
------------------------------------------------------------ */
/* Font
------------------------------------------------------------ */
/* Border Radii
------------------------------------------------------------ */
/* Box Shadows
------------------------------------------------------------ */
/* Animation
------------------------------------------------------------ */
/* Base Object
------------------------------------------------------------ */
.navbar {
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  position: fixed;
  z-index: 1;
  display: flex;
  margin-bottom: 32px;
  padding: 0 16px;
  width: 100%;
  height: 62px;
  font-size: 14px;
  line-height: 62px;
  background-color: #ffffff;
  border-bottom: 1px solid #ced7df; }

/* Base Objects
------------------------------------------------------------ */
.navbar-title {
  flex-grow: 0;
  margin-right: 50px; }

.navbar-menu-left,
.navbar-menu-right {
  display: flex;
  flex-direction: row;
  margin: 0;
  list-style: none; }

.navbar-menu-left {
  justify-content: flex-start;
  flex-grow: 1; }

.navbar-menu-right {
  justify-content: flex-end;
  flex-grow: 0; }

.navbar-menu-item {
  margin: 0 50px 0 0; }
  .navbar-menu-item a {
    color: #666c72;
    display: inline-block; }

.navbar-menu-item-profile-picture {
  vertical-align: middle;
  margin-right: 10px; }

/* Base Object - Modifiers
------------------------------------------------------------ */
.navbar-menu-item a.navbar-menu-item--active {
  margin-right: -10px;
  margin-left: -10px;
  padding-right: 10px;
  padding-left: 10px;
  color: #343e47;
  box-shadow: inset 0 -2px #168eea; }

.navbar-menu-item--last {
  margin-right: 0; }

/* Global Reset // We'll pull in a common reset here, perhaps in another file!
------------------------------------------------------------ */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box; }
/* ... */

